--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="icon" href="imagenes/bicicleta_logo.jpg" type="image/x-icon">
     <link rel="stylesheet" href="css/all.min.css">
-    <link href="estilo_css.css" rel="stylesheet">
+    <link href="estilo.css" rel="stylesheet">
    
 </head>
 <body>
