--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JANKO Eco bicicletas</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="estilos.css"> <!-- Nombre correcto del CSS -->
     <link rel="icon" href="imagenes/bicicleta_logo.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-    <!-- Encabezado -->
+    <!-- BARRA DE NAVEGACIÓN -->    
     <header>
         <div class="logo">
             <img src="imagenes/bicicleta_logo.jpg" alt="JANKO eco bicicletas Logo">
@@ -20,7 +19,7 @@
                 <li><a href="#objetivo">Objetivo</a></li>
                 <li><a href="#caracteristicas">Características</a></li>
                 <li><a href="#beneficios">Beneficios</a></li>
-                <li><a href="#contacto">Contacto</a></li>
+                <li><a href="#productos">Productos</a></li>
             </ul>
         </nav>
     </header>
@@ -45,20 +44,13 @@
 
     <!-- Sección de Productos -->
     <section id="productos">
-        <h1>Nuestros Productos</h1>
+        <h2>NUESTROS PRODUCTOS</h2>
         <div id="producto">
-            <img src="imagenes/bicicleta1.jpg" alt="Bicicleta 1">
-            <img src="imagenes/bicicleta2.jpg" alt="Bicicleta 2">
-            <img src="imagenes/bicicleta3.webp" alt="Bicicleta 3">
-            <img src="imagenes/imagen4.jpg" alt="Bicicleta 4">
+            <img width="700px" height="500px" src="imagenes/bicicleta1.jpg" alt="Bicicleta 1">
+            <img width="700px" height="500px" src="imagenes/bicicleta2.jpg" alt="Bicicleta 2">
+            <img width="700px" height="500px" src="imagenes/bicicleta3.webp" alt="Bicicleta 3">
+            <img width="700px" height="500px" src="imagenes/imagen4.jpg" alt="Bicicleta 4">
         </div>
-    </section>
-
-    <!-- Sección de Contacto -->
-    <section id="contacto">
-        <h2>Contáctanos</h2>
-        <p>Déjanos tus comentarios o consultas. ¡Estaremos encantados de ayudarte!</p>
-        <button>Enviar mensaje</button>
     </section>
 
     <!-- Pie de Página -->
@@ -72,3 +64,4 @@
     </footer>
 </body>
 </html>
+
