--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JANKO Eco bicicletas</title>
-    <link rel="stylesheet" href="estilos.css"> <!-- Nombre correcto del CSS -->
+    <link rel="stylesheet" href="estilo.css"> <!-- Nombre correcto del CSS -->
     <link rel="icon" href="imagenes/bicicleta_logo.jpg" type="image/x-icon">
 </head>
 <body>
