--- a/index.html
+++ b/index.html
@@ -4,64 +4,92 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JANKO Eco bicicletas</title>
-    <link rel="stylesheet" href="estilo.css"> <!-- Nombre correcto del CSS -->
-    <link rel="icon" href="imagenes/bicicleta_logo.jpg" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- BARRA DE NAVEGACIÓN -->    
-    <header>
-        <div class="logo">
-            <img src="imagenes/bicicleta_logo.jpg" alt="JANKO eco bicicletas Logo">
-            <h1>JANKO eco bicicletas</h1>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <img src="imagenes/bicicleta_logo.jpg" alt="Logo" width="40" class="d-inline-block align-text-top">
+                JANKO Eco bicicletas
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="#objetivo">Objetivo</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#caracteristicas">Características</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#beneficios">Beneficios</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contacto">Contacto</a></li>
+                </ul>
+            </div>
         </div>
-        <nav>
-            <ul>
-                <li><a href="#objetivo">Objetivo</a></li>
-                <li><a href="#caracteristicas">Características</a></li>
-                <li><a href="#beneficios">Beneficios</a></li>
-                <li><a href="#productos">Productos</a></li>
-            </ul>
-        </nav>
-    </header>
+    </nav>
 
-    <!-- Sección de Objetivo -->
-    <section id="objetivo">
-        <h2>¿Qué queremos lograr?</h2>
-        <p>Queremos expandir la visibilidad de esta marca, concienciando a diversas personas sobre productos eco-amigables.</p>
-    </section>
-
-    <!-- Sección de Características -->
-    <section id="caracteristicas">
-        <h2>Características del Producto</h2>
-        <p>Nuestras bicicletas están diseñadas con materiales reciclados y tecnología avanzada para minimizar el impacto ambiental.</p>
-    </section>
-
-    <!-- Sección de Beneficios -->
-    <section id="beneficios">
-        <h2>Beneficios para el Usuario</h2>
-        <p>Contribuye al medio ambiente mientras disfrutas de un medio de transporte saludable y eficiente.</p>
-    </section>
-
-    <!-- Sección de Productos -->
-    <section id="productos">
-        <h2>NUESTROS PRODUCTOS</h2>
-        <div id="producto">
-            <img width="700px" height="500px" src="imagenes/bicicleta1.jpg" alt="Bicicleta 1">
-            <img width="700px" height="500px" src="imagenes/bicicleta2.jpg" alt="Bicicleta 2">
-            <img width="700px" height="500px" src="imagenes/bicicleta3.webp" alt="Bicicleta 3">
-            <img width="700px" height="500px" src="imagenes/imagen4.jpg" alt="Bicicleta 4">
+    <div id="mainCarousel" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="imagenes/bicicleta1.jpg" class="d-block w-100" alt="Bicicleta 1">
+            </div>
+            <div class="carousel-item">
+                <img src="imagenes/bicicleta2.jpg" class="d-block w-100" alt="Bicicleta 2">
+            </div>
+            <div class="carousel-item">
+                <img src="imagenes/bicicleta3.webp" class="d-block w-100" alt="Bicicleta 3">
+            </div>
         </div>
-    </section>
+        <button class="carousel-control-prev" type="button" data-bs-target="#mainCarousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Anterior</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#mainCarousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Siguiente</span>
+        </button>
+    </div>
 
-    <!-- Pie de Página -->
-    <footer>
+    <div class="container my-5">
+        <section id="objetivo" class="text-center mb-5">
+            <h2 class="text-success">¿Qué queremos lograr?</h2>
+            <p>Queremos expandir la visibilidad de esta marca, concienciando a diversas personas sobre productos eco-amigables.</p>
+        </section>
+
+        <section id="caracteristicas" class="row g-4">
+            <div class="col-md-6">
+                <h2 class="text-success">Características del Producto</h2>
+                <p>Nuestras bicicletas están diseñadas con materiales reciclados y tecnología avanzada para minimizar el impacto ambiental.</p>
+            </div>
+            <div class="col-md-6">
+                <div class="card">
+                    <img src="imagenes/imagen4.jpg" class="card-img-top" alt="Bicicleta Eco">
+                    <div class="card-body">
+                        <h5 class="card-title">Diseño innovador</h5>
+                        <p class="card-text">Estilo, eficiencia y cuidado ambiental en cada detalle.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="beneficios" class="text-center my-5">
+            <h2 class="text-success">Beneficios para el Usuario</h2>
+            <p>Contribuye al medio ambiente mientras disfrutas de un medio de transporte saludable y eficiente.</p>
+        </section>
+    </div>
+
+    <footer class="bg-success text-white text-center py-3">
         <p>&copy; 2024 JANKO Eco bicicletas - Todos los derechos reservados.</p>
-        <div class="social-media">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
+        <div>
+            <a href="#" class="text-white me-2"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" class="text-white me-2"><i class="fab fa-twitter"></i></a>
+            <a href="#" class="text-white"><i class="fab fa-instagram"></i></a>
         </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
