--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JANKO Eco bicicletas</title>
+    <!-- CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
         <div class="container">
             <a class="navbar-brand" href="#">
@@ -20,22 +22,23 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#objetivo">Objetivo</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#ayuda">Ayuda</a></li>
                     <li class="nav-item"><a class="nav-link" href="#caracteristicas">Características</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#beneficios">Beneficios</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#ubicacion">Ubicación</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contacto">Contacto</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <div id="mainCarousel" class="carousel slide" data-bs-ride="carousel">
+    <!-- Carousel -->
+    <div id="mainCarousel" class="carousel slide mt-3" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="imagenes/bicicleta1.jpg" class="d-block w-100" alt="Bicicleta 1">
+                <img src="imagenes/van-rysel-fcr-ultegra-di2-1.jpg" class="d-block w-100" alt="Bicicleta 1">
             </div>
             <div class="carousel-item">
-                <img src="imagenes/bicicleta2.jpg" class="d-block w-100" alt="Bicicleta 2">
+                <img src="imagenes/7X5A9178_resize_1024x1024@2x.webp" class="d-block w-100" alt="Bicicleta 2">
             </div>
             <div class="carousel-item">
                 <img src="imagenes/bicicleta3.webp" class="d-block w-100" alt="Bicicleta 3">
@@ -51,12 +54,15 @@
         </button>
     </div>
 
+    <!-- Main Content -->
     <div class="container my-5">
+        <!-- Objetivo -->
         <section id="objetivo" class="text-center mb-5">
             <h2 class="text-success">¿Qué queremos lograr?</h2>
-            <p>Queremos expandir la visibilidad de esta marca, concienciando a diversas personas sobre productos eco-amigables.</p>
+            <p>Queremos expandir la visibilidad de esta marca, concientizando a diversas personas sobre productos eco-amigables que existen y se pueden transformar. Un mundo más ecológico es un mundo más saludable.</p>
         </section>
 
+        <!-- Características -->
         <section id="caracteristicas" class="row g-4">
             <div class="col-md-6">
                 <h2 class="text-success">Características del Producto</h2>
@@ -73,12 +79,125 @@
             </div>
         </section>
 
-        <section id="beneficios" class="text-center my-5">
+        <section id="modelos" class="container my-5">
+          <h2 class="text-center mb-4">MODELOS</h2>
+          <div class="row g-4">
+              <!-- Modelo 1 -->
+              <div class="col-md-4">
+                  <div class="card" style="width: 100%;">
+                      <img src="imagenes/bicicleta-montanera-aro-27.5-jafi-verde.jpg" class="card-img-top" alt="Montañera 1">
+                      <div class="card-body">
+                          <h5 class="card-title">Montañera</h5>
+                          <a href="#" class="btn btn-primary">Comprar</a>
+                      </div>
+                  </div>
+              </div>
+              <!-- Modelo 2 -->
+              <div class="col-md-4">
+                  <div class="card" style="width: 100%;">
+                      <img src="imagenes/image-87e1fdd6ac1c4f578663d9bde7f1a736.webp" class="card-img-top" alt="Montañera 2">
+                      <div class="card-body">
+                          <h5 class="card-title">Montañera</h5>
+                          <a href="#" class="btn btn-primary">Comprar</a>
+                      </div>
+                  </div>
+              </div>
+              <!-- Modelo 3 -->
+              <div class="col-md-4">
+                  <div class="card" style="width: 100%;">
+                      <img src="imagenes/bicicleta2.jpg" class="card-img-top" alt="Montañera 3">
+                      <div class="card-body">
+                          <h5 class="card-title">Montañera</h5>
+                          <a href="#" class="btn btn-primary">Comprar</a>
+                      </div>
+                  </div>
+              </div>
+              <!-- Modelo 4 -->
+              <div class="col-md-4">
+                  <div class="card" style="width: 100%;">
+                      <img src="imagenes/images.jpg" class="card-img-top" alt="Carretera 1">
+                      <div class="card-body">
+                          <h5 class="card-title">Carretera</h5>
+                          <a href="#" class="btn btn-primary">Comprar</a>
+                      </div>
+                  </div>
+              </div>
+              <!-- Modelo 5 -->
+              <div class="col-md-4">
+                  <div class="card" style="width: 100%;">
+                      <img src="imagenes/Expansión-Ecobici-portada.jpg" class="card-img-top" alt="Carretera 2">
+                      <div class="card-body">
+                          <h5 class="card-title">Carretera</h5>
+                          <a href="#" class="btn btn-primary">Comprar</a>
+                      </div>
+                  </div>
+              </div>
+              <!-- Modelo 6 -->
+              <div class="col-md-4">
+                  <div class="card" style="width: 100%;">
+                      <img src="imagenes/menu_banner_right_2.webp" class="card-img-top" alt="Carretera 3">
+                      <div class="card-body">
+                          <h5 class="card-title">Carretera</h5>
+                          <a href="#" class="btn btn-primary">Comprar</a>
+                      </div>
+                  </div>
+              </div>
+              <!-- Modelo 7 -->
+              <div class="col-md-4">
+                  <div class="card" style="width: 100%;">
+                      <img src="imagenes/whatsapp_image_2023-04-21_at_1.25.08_pm_3.jpg" class="card-img-top" alt="Gravel 1">
+                      <div class="card-body">
+                          <h5 class="card-title">Gravel</h5>
+                          <a href="#" class="btn btn-primary">Comprar</a>
+                      </div>
+                  </div>
+              </div>
+              <!-- Modelo 8 -->
+              <div class="col-md-4">
+                  <div class="card" style="width: 100%;">
+                      <img src="imagenes/ridestyle-race-canyon-aeroad-MY25-07.webp" class="card-img-top" alt="Gravel 2">
+                      <div class="card-body">
+                          <h5 class="card-title">Gravel</h5>
+                          <a href="#" class="btn btn-primary">Comprar</a>
+                      </div>
+                  </div>
+              </div>
+              <!-- Modelo 9 -->
+              <div class="col-md-4">
+                  <div class="card" style="width: 100%;">
+                      <img src="imagenes/bicicleta1.jpg" class="card-img-top" alt="Gravel 3">
+                      <div class="card-body">
+                          <h5 class="card-title">Gravel</h5>
+                          <a href="#" class="btn btn-primary">Comprar</a>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </section>
+      
+
+        <!-- Beneficios -->
+        <section id="beneficios" class="text-center my-4">
             <h2 class="text-success">Beneficios para el Usuario</h2>
-            <p>Contribuye al medio ambiente mientras disfrutas de un medio de transporte saludable y eficiente.</p>
+            <div class="accordion" id="accordionExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true">
+                            Beneficio #1
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show">
+                        <div class="accordion-body">
+                            Te brindamos el equipaje incorporado para una buena calidad y garantía.
+                        </div>
+                    </div>
+                </div>
+                <!-- Agrega más beneficios si es necesario -->
+            </div>
         </section>
     </div>
 
+    <!-- Footer -->
     <footer class="bg-success text-white text-center py-3">
         <p>&copy; 2024 JANKO Eco bicicletas - Todos los derechos reservados.</p>
         <div>
@@ -88,6 +207,7 @@
         </div>
     </footer>
 
+    <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
