--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
                 </ul>
             </div>
         </div>
+        <div id="promocion"></div>
+
     </nav>
 
     <!-- Carousel -->
@@ -125,7 +127,7 @@
               <!-- Modelo 5 -->
               <div class="col-md-4">
                   <div class="card" style="width: 100%;">
-                      <img src="imagenes/Expansión-Ecobici-portada.jpg" class="card-img-top" alt="Carretera 2">
+                      <img src="iamgenes/ccer5.jpg" class="card-img-top" alt="Carretera 2">
                       <div class="card-body">
                           <h5 class="card-title">Carretera</h5>
                           <a href="#" class="btn btn-primary">Comprar</a>
@@ -209,7 +211,10 @@
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="scripts.js"></script>
+
 </body>
 </html>
+
 
 
