--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               <!-- Modelo 5 -->
               <div class="col-md-4">
                   <div class="card" style="width: 100%;">
-                      <img src="iamgenes/ccer5.jpg" class="card-img-top" alt="Carretera 2">
+                      <img src="imagenes/ccer5.jpg" class="card-img-top" alt="Carretera 2">
                       <div class="card-body">
                           <h5 class="card-title">Carretera</h5>
                           <a href="#" class="btn btn-primary">Comprar</a>
