--- a/index.html
+++ b/index.html
@@ -81,101 +81,127 @@
             </div>
         </section>
 
-        <section id="modelos" class="container my-5">
-          <h2 class="text-center mb-4">MODELOS</h2>
-          <div class="row g-4">
-              <!-- Modelo 1 -->
-              <div class="col-md-4">
-                  <div class="card" style="width: 100%;">
-                      <img src="imagenes/bicicleta-montanera-aro-27.5-jafi-verde.jpg" class="card-img-top" alt="Montañera 1">
-                      <div class="card-body">
-                          <h5 class="card-title">Montañera</h5>
-                          <a href="#" class="btn btn-primary">Comprar</a>
-                      </div>
-                  </div>
-              </div>
-              <!-- Modelo 2 -->
-              <div class="col-md-4">
-                  <div class="card" style="width: 100%;">
-                      <img src="imagenes/image-87e1fdd6ac1c4f578663d9bde7f1a736.webp" class="card-img-top" alt="Montañera 2">
-                      <div class="card-body">
-                          <h5 class="card-title">Montañera</h5>
-                          <a href="#" class="btn btn-primary">Comprar</a>
-                      </div>
-                  </div>
-              </div>
-              <!-- Modelo 3 -->
-              <div class="col-md-4">
-                  <div class="card" style="width: 100%;">
-                      <img src="imagenes/bicicleta2.jpg" class="card-img-top" alt="Montañera 3">
-                      <div class="card-body">
-                          <h5 class="card-title">Montañera</h5>
-                          <a href="#" class="btn btn-primary">Comprar</a>
-                      </div>
-                  </div>
-              </div>
-              <!-- Modelo 4 -->
-              <div class="col-md-4">
-                  <div class="card" style="width: 100%;">
-                      <img src="imagenes/images.jpg" class="card-img-top" alt="Carretera 1">
-                      <div class="card-body">
-                          <h5 class="card-title">Carretera</h5>
-                          <a href="#" class="btn btn-primary">Comprar</a>
-                      </div>
-                  </div>
-              </div>
-              <!-- Modelo 5 -->
-              <div class="col-md-4">
-                  <div class="card" style="width: 100%;">
-                      <img src="imagenes/ccer5.jpg" class="card-img-top" alt="Carretera 2">
-                      <div class="card-body">
-                          <h5 class="card-title">Carretera</h5>
-                          <a href="#" class="btn btn-primary">Comprar</a>
-                      </div>
-                  </div>
-              </div>
-              <!-- Modelo 6 -->
-              <div class="col-md-4">
-                  <div class="card" style="width: 100%;">
-                      <img src="imagenes/menu_banner_right_2.webp" class="card-img-top" alt="Carretera 3">
-                      <div class="card-body">
-                          <h5 class="card-title">Carretera</h5>
-                          <a href="#" class="btn btn-primary">Comprar</a>
-                      </div>
-                  </div>
-              </div>
-              <!-- Modelo 7 -->
-              <div class="col-md-4">
-                  <div class="card" style="width: 100%;">
-                      <img src="imagenes/whatsapp_image_2023-04-21_at_1.25.08_pm_3.jpg" class="card-img-top" alt="Gravel 1">
-                      <div class="card-body">
-                          <h5 class="card-title">Gravel</h5>
-                          <a href="#" class="btn btn-primary">Comprar</a>
-                      </div>
-                  </div>
-              </div>
-              <!-- Modelo 8 -->
-              <div class="col-md-4">
-                  <div class="card" style="width: 100%;">
-                      <img src="imagenes/ridestyle-race-canyon-aeroad-MY25-07.webp" class="card-img-top" alt="Gravel 2">
-                      <div class="card-body">
-                          <h5 class="card-title">Gravel</h5>
-                          <a href="#" class="btn btn-primary">Comprar</a>
-                      </div>
-                  </div>
-              </div>
-              <!-- Modelo 9 -->
-              <div class="col-md-4">
-                  <div class="card" style="width: 100%;">
-                      <img src="imagenes/bicicleta1.jpg" class="card-img-top" alt="Gravel 3">
-                      <div class="card-body">
-                          <h5 class="card-title">Gravel</h5>
-                          <a href="#" class="btn btn-primary">Comprar</a>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </section>
+        <!-- Section de Modelos -->
+<section id="modelos" class="container my-5">
+    <h2 class="text-center mb-4">MODELOS</h2>
+    <!-- Carousel -->
+    <div id="modelCarousel" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <div class="row g-4">
+                    <!-- Modelo 1 -->
+                    <div class="col-md-4">
+                        <div class="card">
+                            <img src="imagenes/bicicleta-montanera-aro-27.5-jafi-verde.jpg" class="card-img-top" alt="Montañera 1">
+                            <div class="card-body">
+                                <h5 class="card-title">Montañera</h5>
+                                <a href="#" class="btn btn-primary">Comprar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Modelo 2 -->
+                    <div class="col-md-4">
+                        <div class="card">
+                            <img src="imagenes/image-87e1fdd6ac1c4f578663d9bde7f1a736.jpg" class="card-img-top" alt="Montañera 2">
+                            <div class="card-body">
+                                <h5 class="card-title">Montañera</h5>
+                                <a href="#" class="btn btn-primary">Comprar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Modelo 3 -->
+                    <div class="col-md-4">
+                        <div class="card">
+                            <img src="imagenes/I-Speed-3.0_-1024x683.jpg" class="card-img-top" alt="Montañera 3">
+                            <div class="card-body">
+                                <h5 class="card-title">Montañera</h5>
+                                <a href="#" class="btn btn-primary">Comprar</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="row g-4">
+                    <!-- Modelo 4 -->
+                    <div class="col-md-4">
+                        <div class="card">
+                            <img src="imagenes/images.jpg" class="card-img-top" alt="Carretera 1">
+                            <div class="card-body">
+                                <h5 class="card-title">Carretera</h5>
+                                <a href="#" class="btn btn-primary">Comprar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Modelo 5 -->
+                    <div class="col-md-4">
+                        <div class="card">
+                            <img src="imagenes/ccer5.jpg" class="card-img-top" alt="Carretera 2">
+                            <div class="card-body">
+                                <h5 class="card-title">Carretera</h5>
+                                <a href="#" class="btn btn-primary">Comprar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Modelo 6 -->
+                    <div class="col-md-4">
+                        <div class="card">
+                            <img src="imagenes/menu_banner_right_2.jpg" class="card-img-top" alt="Carretera 3">
+                            <div class="card-body">
+                                <h5 class="card-title">Carretera</h5>
+                                <a href="#" class="btn btn-primary">Comprar</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="row g-4">
+                    <!-- Modelo 7 -->
+                    <div class="col-md-4">
+                        <div class="card">
+                            <img src="imagenes/whatsapp_image_2023-04-21_at_1.25.08_pm_3.jpg" class="card-img-top" alt="Gravel 1">
+                            <div class="card-body">
+                                <h5 class="card-title">Gravel</h5>
+                                <a href="#" class="btn btn-primary">Comprar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Modelo 8 -->
+                    <div class="col-md-4">
+                        <div class="card">
+                            <img src="imagenes/ridestyle-race-canyon-aeroad-MY25-07.webp" class="card-img-top" alt="Gravel 2">
+                            <div class="card-body">
+                                <h5 class="card-title">Gravel</h5>
+                                <a href="#" class="btn btn-primary">Comprar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Modelo 9 -->
+                    <div class="col-md-4">
+                        <div class="card">
+                            <img src="imagenes/bicicleta1.jpg" class="card-img-top" alt="Gravel 3">
+                            <div class="card-body">
+                                <h5 class="card-title">Gravel</h5>
+                                <a href="#" class="btn btn-primary">Comprar</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Controles del Carousel -->
+        <button class="carousel-control-prev" type="button" data-bs-target="#modelCarousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Anterior</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#modelCarousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Siguiente</span>
+        </button>
+    </div>
+</section>
+
       
 
         <!-- Beneficios -->
@@ -199,6 +225,31 @@
         </section>
     </div>
 
+    <!-- Contacto -->
+<section id="contacto" class="container my-5">
+    <h2 class="text-center text-success mb-4">Contacto</h2>
+    <form>
+        <div class="row g-3">
+            <div class="col-md-6">
+                <label for="nombre" class="form-label">Nombre</label>
+                <input type="text" class="form-control" id="nombre" placeholder="Tu nombre" required>
+            </div>
+            <div class="col-md-6">
+                <label for="email" class="form-label">Correo Electrónico</label>
+                <input type="email" class="form-control" id="email" placeholder="Tu correo electrónico" required>
+            </div>
+        </div>
+        <div class="mt-3">
+            <label for="mensaje" class="form-label">Mensaje</label>
+            <textarea class="form-control" id="mensaje" rows="5" placeholder="Escribe tu mensaje aquí..." required></textarea>
+        </div>
+        <div class="mt-3 text-center">
+            <button type="submit" class="btn btn-success">Enviar Mensaje</button>
+        </div>
+    </form>
+</section>
+
+
     <!-- Footer -->
     <footer class="bg-success text-white text-center py-3">
         <p>&copy; 2024 JANKO Eco bicicletas - Todos los derechos reservados.</p>
@@ -215,6 +266,3 @@
 
 </body>
 </html>
-
-
-
